[package]
name = "cowabunga_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cowabunga_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.19" }
rand="0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
